--- a/exercises_js.html
+++ b/exercises_js.html
@@ -8,37 +8,32 @@
 </body>
 <script type="text/javascript">  
 
-  // var pets = ["cat", "dog", "iguana"];
-  // pets.push("goldfish");
-  // console.log(pets);
+// var x = "3";
 
-  var books = [
-    {
-      title: "Moby Dick",
-      author: "Melville", 
-      isbn: 4324324324, 
-      pages: 653, 
-      publicationDate: 1851
-    },
-    {
-      title: "Twilight",
-      author: "Someone", 
-      isbn: 43243234234, 
-      pages: 100, 
-      publicationDate: 2001      
-    }
-  ];
-  console.log(books);
-  var newBook = {
-    title: "Killing Time",
-    author: "Kit",
-    isbn: 435345435,
-    pages: 5536,
-    publicationDate: 1990
-  };
+// if (NaN) {
+//   console.log("WAT????");
+// }
 
-  books.push(newBook);
-  console.log(books);
+// Math.floor((Math.random() * 10) + 1); // random number 1 to 10
+
+
+
+
+// var i = 0;
+// var text = "";
+// while (i < 10) {
+//   text = text + "The number is " + i;
+//   i++;
+// }
+// console.log(text);
+
+
+pets = ["dog", "fish", "cat", "iguana", "gorilla"]
+
+for (var i = 0; i < pets.length; i++) {
+  console.log(pets[i]);
+}
+
 
 
 
